kubernetes/workloads/network/envoy-gateway/app/oauth-policy.sops.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: envoy-oauth-admin-policy
  namespace: network
spec:
  targetRefs:
    - group: ENC[AES256_GCM,data:X1c8MGWB0ooBmsKtyDTMqRqhXTJaPcmXdg==,iv:BNalln77VdN7bDNTnDtG8rD7ebafwUvlCQ6OAVpEfRU=,tag:NzxTTA7xMx3M67EJn+hbtw==,type:str]
      kind: ENC[AES256_GCM,data:fZmyLJITYw==,iv:S2p0Ndi394k0BXFXoi3C9tNhi6zN1GcZdI2SmE6dQfA=,tag:UkLxQMQZDh5l0t4XRsgeAQ==,type:str]
      name: ENC[AES256_GCM,data:GG7+y2Hcr4Bw57Zz/E6q3pY=,iv:SoZi1Oi9o4SslmFtxgLXHbDz/7ONDgXZWVOp61xTvNY=,tag:4guewQ03fxU9o+z2zvqO/A==,type:str]
  oidc:
    provider:
      issuer: ENC[AES256_GCM,data:HY4va89EQhz0xkFDqcDs8rur/FcCbdbTrrex,iv:N1ANjBOwePOQR6FxVWOW4mSZmNuw2kBD8xDj+3g7eiM=,tag:a5BrchlgrNlOBp1KVR+6uQ==,type:str]
      authorizationEndpoint: ENC[AES256_GCM,data:rqoSCgWroIMkpnoISWt04vNF/VuCA6JA9RitR+2XZs1Y6n5LM7L0cxmYbtfiG5EeEGBpw+JtBrrWm8ZL/Xlz4Nr7,iv:AWuGgEDU5rvI0tm88U12t25Glx9o0C+xwQ+SxSWBO2s=,tag:KgSRZLjOAqK+DSkpmFl2aw==,type:str]
    clientID: ENC[AES256_GCM,data:U14q5ttWiB7RyoezR0vqr/dlrg3tTMQDvaSV3Jhc8ZCrhPmN0J0Tad5XpwfTbB6/ck2BRuJWwKKXObTegUqU0xOm8PuFmV2R,iv:URX7+cDv1X4OA0iQHXlghG4GiUWvW4mcOH/TQ8vKEyg=,tag:KZwb6+hhwjxQx8iwv7qc4A==,type:str]
    clientSecret:
      name: ENC[AES256_GCM,data:IrmSUNOm2u+aiIzm8ZWAYm+wy2iUCoQm+Zo=,iv:Gk7BsQSFx2wud79E83z3dMfNtE7u+pV+zxjQd2p9tEg=,tag:bv/bzaB4zJO1G0FgajQzZg==,type:str]
      namespace: ENC[AES256_GCM,data:O3047/RQRg==,iv:Byph8ETsmn8dKK9BoUPfpbp74PN1SIEUTPxlw1fvfH4=,tag:oOEFsOr35Nb0LdE71e5XZg==,type:str]
    redirectURL: ENC[AES256_GCM,data:jalqWyUwAlegeuAQtcKAABH1Ze9z9VMc2jCePcHB5TPry0ZTX9c025wS5Y1XYg==,iv:GiY47eNTm1yvYJdVe9S4c4pzsMpoh93f/a0wjlyeMmA=,tag:SsZG71w3FAxjBnfPWh17ag==,type:str]
    logoutPath: ENC[AES256_GCM,data:43S/ecUjPQ==,iv:AuciVK+8HgbWs1svFCn5AvwFXMmBOxSoOm8EsYto5Gg=,tag:7h4woUj/XTux/n8vfrykVg==,type:str]
    cookieDomain: ENC[AES256_GCM,data:McpS0H3HQuVIckEipn/Sjg==,iv:ji73imcXtAZ8uKbPc01ifumIQO6T74FzIXo/HpIXv2w=,tag:CQ/L3GA2xkmy3lN4WnNLNQ==,type:str]
    cookieNames:
      accessToken: ENC[AES256_GCM,data:XVdqdcGZoqlR3+o=,iv:LtLCrCk6SzQezUughTSqCO+Ndx+xAmh7z0Qa3EE+IO4=,tag:7Z7Cutj6YLwLNcTpyqmdcw==,type:str]
      idToken: ENC[AES256_GCM,data:gcNvEylj7A==,iv:/LdSEhyOaH2UzrU/K5nTaEP8Goi6pdK9C9w+6+yqLAs=,tag:lrT10551yHkM6mrBzoTpgA==,type:str]
    scopes:
      - ENC[AES256_GCM,data:P8CQ3DXu,iv:qM6R5zpTqsNJBMRHKyipIe+NPAjMm84M+/FE4fN27fQ=,tag:uGGbkpu7O2UG6lZHZWxxkQ==,type:str]
      - ENC[AES256_GCM,data:zwmYiZg=,iv:49nuIapCaUDsGIiqWYzggT+9uN4Em02JfwSyeZR7g7Q=,tag:/OqqNBbqtJP6wVSsPJmuRw==,type:str]
      - ENC[AES256_GCM,data:uUOJ2kBi7g==,iv:ijGqDTgSv38Mqd2JIuf4borlFvVcAe2HQs/UbSs7MSw=,tag:kmERBAT8RKBENt92C3EzBw==,type:str]
  jwt:
    providers:
      - name: ENC[AES256_GCM,data:LkULw5YR,iv:iOnrfUADbbGCmvW8D++ZBwQXJFllRqkH/TxfANsmW5Q=,tag:i13MALZSnEiV8hJnsJbmaA==,type:str]
        issuer: ENC[AES256_GCM,data:DA0RSmxoZqfnrl4nnr/4xniGTCg3f0opejSG,iv:ruZnCSTXohIc3jF/66O1FYHhYVtujFYnIKKRhckF4OU=,tag:pUQbXvxsA5XAOcbVT/nijQ==,type:str]
        remoteJWKS:
          uri: ENC[AES256_GCM,data:8SYiu3qwiQTux6jHye7O+9U6bWkXjZaHqC3R//Da6DhpnIWyi9/KA1gs,iv:hRYmTGWDzeYfpc16IZdnixr+lYx7phH0TJymQZIJqDc=,tag:hXwL7JZFeYjMwkGVUblUaA==,type:str]
        extractFrom:
          cookies:
            - ENC[AES256_GCM,data:HvmE/Te5eg==,iv:xYwmlWsO0caAZGXS1b6eVlwLyDnBbdxBsZk6KdAoits=,tag:A+6XbXG7eu70CVT6o3nuuQ==,type:str]
          params:
            - ENC[AES256_GCM,data:uX36x4DNqh/qnhtN,iv:onO9yRrf2ZJLTkAO5C1VvjPIwI11shuYw5FLK0Q2Pqg=,tag:y5A61mB5Q1xO2jX7pv6xYA==,type:str]
  authorization:
    defaultAction: ENC[AES256_GCM,data:MKsUnA==,iv:Eez9I2Cko/BFUiG3X9XFna3QRwr4DAN4HSMCZGKZUlI=,tag:nOX5YbJSFBo4DG7QZwQLyA==,type:str]
    rules:
      - name: ENC[AES256_GCM,data:873tn0gLc1bGiDyGTkL3,iv:dkTESaN7qTPtdEX9T6PZgKkBfEzGYULUnWCE1sthz+Q=,tag:4ZOHj5O49+DbMYJ7+j5HrQ==,type:str]
        action: ENC[AES256_GCM,data:SNhIUec=,iv:4A4cPHR45IknFJzbcikOniNa9sgdx70Dld/hI4paOI4=,tag:VNoNT8FfGt3NE/iNAgyHzw==,type:str]
        principal:
          jwt:
            provider: ENC[AES256_GCM,data:7ducz3af,iv:NcEI0/OujXzVC2z8OU28yN0jpx1i7w+smrSWU8nLO50=,tag:E0l8LNREWCpPEnGwi0/iNw==,type:str]
            claims:
              - name: ENC[AES256_GCM,data:ASSYR/s=,iv:u6jW4RT9JvW0U6t0ss37GhWIp3ZDJ0MSVY8Lgj5mAIM=,tag:qtXY4uGMKxJriyi0048/yA==,type:str]
                values:
                  - ENC[AES256_GCM,data:TWkm9BcoP9tADsKRx06Stg==,iv:yM0kB+R3lcaPDl2fRzhQFNhliJnrXfjQpEIQk37ONn0=,tag:jFjjqy6xQP3r/ZlNogsoeA==,type:str]
sops:
  age:
    - recipient: age1d7ltdyge970mha3gqyenf9mrn8ezg60nexy99vzndvl592q2zcxqkytdwd
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEdFFDc1JhUmFwa0VOdTRt
[...]
        J7I4KhE8KRc2pMj8LnFD3+xqTUvawiLpQcGQ/lizZ/6BuBlFP6g35Q==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-12T04:54:35Z"
  mac: ENC[AES256_GCM,data:co9gXDpQfs8KcRON5vxl5ogNcErH77ym83jRASKS8iqiUh8wXYp9DcFjG8gZBz50sD32XVtJfRoHBBwOJsBNNrCatZcMUxqkq6GSrKg02kmt4k8ih+Yq5Im4lGqpmPVZOdnH/zGj+z+ty7ohfkVr942dyo6DxY7L73+2z2PNibQ=,iv:1EZXYfDuHUY38ooiN22gTop6go3FRfCwOPJAHVHiV6o=,tag:xwvW7wJHSanb7aY29gYi9Q==,type:str]
  encrypted_regex: ^(spec)$
  mac_only_encrypted: true
  version: 3.12.1
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: envoy-oauth-users-policy
  namespace: network
spec:
  targetRefs:
    - group: ENC[AES256_GCM,data:X1c8MGWB0ooBmsKtyDTMqRqhXTJaPcmXdg==,iv:BNalln77VdN7bDNTnDtG8rD7ebafwUvlCQ6OAVpEfRU=,tag:NzxTTA7xMx3M67EJn+hbtw==,type:str]
      kind: ENC[AES256_GCM,data:fZmyLJITYw==,iv:S2p0Ndi394k0BXFXoi3C9tNhi6zN1GcZdI2SmE6dQfA=,tag:UkLxQMQZDh5l0t4XRsgeAQ==,type:str]
      name: ENC[AES256_GCM,data:M0Z5kuw0rn8SX0xt3bGEKOk=,iv:9+IBiA6R2xmHjvxVge2c11NtrT+aiYD1minjM57vh3E=,tag:j5NZdThx0t0En0FWBPJv2Q==,type:str]
  oidc:
    provider:
      issuer: ENC[AES256_GCM,data:HY4va89EQhz0xkFDqcDs8rur/FcCbdbTrrex,iv:N1ANjBOwePOQR6FxVWOW4mSZmNuw2kBD8xDj+3g7eiM=,tag:a5BrchlgrNlOBp1KVR+6uQ==,type:str]
      authorizationEndpoint: ENC[AES256_GCM,data:rqoSCgWroIMkpnoISWt04vNF/VuCA6JA9RitR+2XZs1Y6n5LM7L0cxmYbtfiG5EeEGBpw+JtBrrWm8ZL/Xlz4Nr7,iv:AWuGgEDU5rvI0tm88U12t25Glx9o0C+xwQ+SxSWBO2s=,tag:KgSRZLjOAqK+DSkpmFl2aw==,type:str]
    clientID: ENC[AES256_GCM,data:U14q5ttWiB7RyoezR0vqr/dlrg3tTMQDvaSV3Jhc8ZCrhPmN0J0Tad5XpwfTbB6/ck2BRuJWwKKXObTegUqU0xOm8PuFmV2R,iv:URX7+cDv1X4OA0iQHXlghG4GiUWvW4mcOH/TQ8vKEyg=,tag:KZwb6+hhwjxQx8iwv7qc4A==,type:str]
    clientSecret:
      name: ENC[AES256_GCM,data:IrmSUNOm2u+aiIzm8ZWAYm+wy2iUCoQm+Zo=,iv:Gk7BsQSFx2wud79E83z3dMfNtE7u+pV+zxjQd2p9tEg=,tag:bv/bzaB4zJO1G0FgajQzZg==,type:str]
      namespace: ENC[AES256_GCM,data:O3047/RQRg==,iv:Byph8ETsmn8dKK9BoUPfpbp74PN1SIEUTPxlw1fvfH4=,tag:oOEFsOr35Nb0LdE71e5XZg==,type:str]
    redirectURL: ENC[AES256_GCM,data:eiKdnqx/lSh/e0WMcPzK6HwiOxDjLETxe3DAeCdrKaw5ZJuQL1reGfbVGbGHLtpz4bUz6g==,iv:cDazexTkgPxHq0Mjfj/S4TybqHRoPghq+tOXHSibMUk=,tag:ED0SwNrA0/OS7sFeVFFadQ==,type:str]
    logoutPath: ENC[AES256_GCM,data:43S/ecUjPQ==,iv:AuciVK+8HgbWs1svFCn5AvwFXMmBOxSoOm8EsYto5Gg=,tag:7h4woUj/XTux/n8vfrykVg==,type:str]
    cookieDomain: ENC[AES256_GCM,data:McpS0H3HQuVIckEipn/Sjg==,iv:ji73imcXtAZ8uKbPc01ifumIQO6T74FzIXo/HpIXv2w=,tag:CQ/L3GA2xkmy3lN4WnNLNQ==,type:str]
    cookieNames:
      accessToken: ENC[AES256_GCM,data:XVdqdcGZoqlR3+o=,iv:LtLCrCk6SzQezUughTSqCO+Ndx+xAmh7z0Qa3EE+IO4=,tag:7Z7Cutj6YLwLNcTpyqmdcw==,type:str]
      idToken: ENC[AES256_GCM,data:gcNvEylj7A==,iv:/LdSEhyOaH2UzrU/K5nTaEP8Goi6pdK9C9w+6+yqLAs=,tag:lrT10551yHkM6mrBzoTpgA==,type:str]
    scopes:
      - ENC[AES256_GCM,data:P8CQ3DXu,iv:qM6R5zpTqsNJBMRHKyipIe+NPAjMm84M+/FE4fN27fQ=,tag:uGGbkpu7O2UG6lZHZWxxkQ==,type:str]
      - ENC[AES256_GCM,data:zwmYiZg=,iv:49nuIapCaUDsGIiqWYzggT+9uN4Em02JfwSyeZR7g7Q=,tag:/OqqNBbqtJP6wVSsPJmuRw==,type:str]
      - ENC[AES256_GCM,data:uUOJ2kBi7g==,iv:ijGqDTgSv38Mqd2JIuf4borlFvVcAe2HQs/UbSs7MSw=,tag:kmERBAT8RKBENt92C3EzBw==,type:str]
  jwt:
    providers:
      - name: ENC[AES256_GCM,data:LkULw5YR,iv:iOnrfUADbbGCmvW8D++ZBwQXJFllRqkH/TxfANsmW5Q=,tag:i13MALZSnEiV8hJnsJbmaA==,type:str]
        issuer: ENC[AES256_GCM,data:DA0RSmxoZqfnrl4nnr/4xniGTCg3f0opejSG,iv:ruZnCSTXohIc3jF/66O1FYHhYVtujFYnIKKRhckF4OU=,tag:pUQbXvxsA5XAOcbVT/nijQ==,type:str]
        remoteJWKS:
          uri: ENC[AES256_GCM,data:8SYiu3qwiQTux6jHye7O+9U6bWkXjZaHqC3R//Da6DhpnIWyi9/KA1gs,iv:hRYmTGWDzeYfpc16IZdnixr+lYx7phH0TJymQZIJqDc=,tag:hXwL7JZFeYjMwkGVUblUaA==,type:str]
        extractFrom:
          cookies:
            - ENC[AES256_GCM,data:HvmE/Te5eg==,iv:xYwmlWsO0caAZGXS1b6eVlwLyDnBbdxBsZk6KdAoits=,tag:A+6XbXG7eu70CVT6o3nuuQ==,type:str]
          params:
            - ENC[AES256_GCM,data:uX36x4DNqh/qnhtN,iv:onO9yRrf2ZJLTkAO5C1VvjPIwI11shuYw5FLK0Q2Pqg=,tag:y5A61mB5Q1xO2jX7pv6xYA==,type:str]
  authorization:
    defaultAction: ENC[AES256_GCM,data:MKsUnA==,iv:Eez9I2Cko/BFUiG3X9XFna3QRwr4DAN4HSMCZGKZUlI=,tag:nOX5YbJSFBo4DG7QZwQLyA==,type:str]
    rules:
      - name: ENC[AES256_GCM,data:Iu0RZO/ljUFGka4=,iv:BajwR5Ea8/tx1WkDdNBI7ST5rMQt+D043iImMIEy2sE=,tag:lHfXnWByMwSTWacD3MFf/A==,type:str]
        action: ENC[AES256_GCM,data:SNhIUec=,iv:4A4cPHR45IknFJzbcikOniNa9sgdx70Dld/hI4paOI4=,tag:VNoNT8FfGt3NE/iNAgyHzw==,type:str]
        principal:
          jwt:
            provider: ENC[AES256_GCM,data:7ducz3af,iv:NcEI0/OujXzVC2z8OU28yN0jpx1i7w+smrSWU8nLO50=,tag:E0l8LNREWCpPEnGwi0/iNw==,type:str]
            claims:
              - name: ENC[AES256_GCM,data:ASSYR/s=,iv:u6jW4RT9JvW0U6t0ss37GhWIp3ZDJ0MSVY8Lgj5mAIM=,tag:qtXY4uGMKxJriyi0048/yA==,type:str]
                values:
                  - ENC[AES256_GCM,data:TWkm9BcoP9tADsKRx06Stg==,iv:yM0kB+R3lcaPDl2fRzhQFNhliJnrXfjQpEIQk37ONn0=,tag:jFjjqy6xQP3r/ZlNogsoeA==,type:str]
                  - ENC[AES256_GCM,data:K7vZ7L/rPcrkG2ikIMUXByaU2DNeA6BB2RM=,iv:eTZq/QSKbMGV1Zh6ecs6+vKQGdiUFIbdO0DxYgVn4fw=,tag:kLLU0dJd+LXcVNdHamJEMQ==,type:str]
sops:
  age:
    - recipient: age1d7ltdyge970mha3gqyenf9mrn8ezg60nexy99vzndvl592q2zcxqkytdwd
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEdFFDc1JhUmFwa0VOdTRt
[...]
        J7I4KhE8KRc2pMj8LnFD3+xqTUvawiLpQcGQ/lizZ/6BuBlFP6g35Q==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-12T04:54:35Z"
  mac: ENC[AES256_GCM,data:co9gXDpQfs8KcRON5vxl5ogNcErH77ym83jRASKS8iqiUh8wXYp9DcFjG8gZBz50sD32XVtJfRoHBBwOJsBNNrCatZcMUxqkq6GSrKg02kmt4k8ih+Yq5Im4lGqpmPVZOdnH/zGj+z+ty7ohfkVr942dyo6DxY7L73+2z2PNibQ=,iv:1EZXYfDuHUY38ooiN22gTop6go3FRfCwOPJAHVHiV6o=,tag:xwvW7wJHSanb7aY29gYi9Q==,type:str]
  encrypted_regex: ^(spec)$
  mac_only_encrypted: true
  version: 3.12.1
